2008-05-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * po/*, src/*, *:
   Initial import of spellcheck plugin.
